--- a/TESODEV BACKEND CHALLANGE/appsettings.json
+++ b/TESODEV BACKEND CHALLANGE/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AdminConncetString": "Server=DESKTOP-HCIS413;Initial Catalog=TesodevDB;"
+    "AdminConncetString": "asda;"
   }
 }
